# RESTAURANT_SUGGESTION

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/restaurant_ai/: generator.py  main.py  secret_key_example.py
